# backend/internal/application/dto/user_dto.go
@@ -30,3 +30,8 @@ type LoginDto struct {
 	Password string `json:"password" validate:"required"`
 }
 
+type RegisterDto struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
